--- a/Application Source/Strive/UI/Windows/Main.resx
+++ b/Application Source/Strive/UI/Windows/Main.resx
@@ -109,10 +109,22 @@
     <value>17, 17</value>
   </data>
   <data name="FileSave.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>202, 17</value>
+    <value>65, 55</value>
   </data>
   <data name="FileQuit.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>113, 17</value>
+    <value>65, 36</value>
+  </data>
+  <data name="ViewMenu.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>338, 12</value>
+  </data>
+  <data name="ViewCharacters.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>341, 38</value>
+  </data>
+  <data name="ViewLog.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>453, 11</value>
+  </data>
+  <data name="ViewConnect.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>459, 35</value>
   </data>
   <data name="$this.Name">
     <value>Main</value>
