--- a/Source/Strive/UI/Windows/Main.resx
+++ b/Source/Strive/UI/Windows/Main.resx
@@ -144,4 +144,26 @@
   <data name="$this.Name">
     <value>Main</value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAQAAAAAAAoAQAAJgAAACAgEAAAAAAA6AIAAE4BAAAoAAAAEAAAACAAAAABAAQAAAAAAMAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAgAAAAICAAIAAAACAAIAAgIAAAICAgADAwMAAAAD/AAD/
+        AAAA//8A/wAAAP8A/wD//wAA////AAAAAAAAAAAAAH//j/j/jwAAf/+P+P+PAAB4iIiIiIgAAH93h3h3
+        jwAAf3eHeHePAAB4iIiIiIgAAH93h3h3jwAAf3eHeHePAAB4iIiIiIgAAH93h3h3jwAAf3eHeHePAAB4
+        iIiIgAAAAH//j/j39wAAf/+P+PdwAAB3d3d3dwAAwAEAAMABAADAAQAAwAEAAMABAADAAQAAwAEAAMAB
+        AADAAQAAwAEAAMABAADAAQAAwAEAAMADAADABwAAwA8AACgAAAAgAAAAQAAAAAEABAAAAAAAAAIAAAAA
+        AAAAAAAAEAAAABAAAAAAAAAAAACAAACAAAAAgIAAgAAAAIAAgACAgAAAgICAAMDAwAAAAP8AAP8AAAD/
+        /wD/AAAA/wD/AP//AAD///8AiIZmZmZmZmZmZmZmZmZoiIhmZmZmZmZmZmZmZmZmYIiGZmZpZmZmZmZm
+        ZmZmZmYIBmZpZmZmZmZmZmZmZmZmAGZmmWZmZmZmZmZmZmZmZmBmZplmZmZmZmZmZmZmZmZgZmZpa2Zm
+        ZmZmZmZmZmZmZpZra2tmZmZmZmZmZmZmZmaWa2tmZmZmZmZmZmZmZmYGmWtrtmZmZmZmZmZmYAZmZmmb
+        bLtmZmZmZmZmZmAGZmBmm7ZrZmZmZmZmZmZgAGZmBmm7nGZmZmZmZmZmZgBmZmZmnLm2ZmZmZmZmZmYA
+        ZmaZu7ubZmZmZmZmZmZmAAZma7m2m8ZmZmZmZmZmZgAGZmZmmczMxmZmZmZmZmYABmZplmZsZsAAZmZm
+        ZmZmAABmmWZmZmYAAABmZmZmYAAAZmZmZmZmAAAABmZmZmAAAGZmZmZmZmAAAABmZmYAAABmZmBmZmZg
+        AABgAAZgAAAAZgBgBmZmZmZmZgAAAAAAAGYAZgBmZmZmZmYAAAAAAABmAGZgBmZmZmZgAAAAAAAAZgAG
+        ZgAGZmZmAAAAAAAAAGYAZmZmAAAAAAAAAAAAAAZmBmZmZmYAAAAAAAAAAAAGYAZmZmZmZgAAAAAAAAAA
+        AACAZmZmZmZmZmAAAGZmYAAIiGZmZmZmZmZmZmZmZmYAiIiGZmZmZmZmZmZmYAAACIgAAAAAAAAABAAA
+        AAKAAAADAAAAAQAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAQAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAwAAAAMAAAADAAAAA4AAAAMAAAACAAAABgAAAB0AAAAYAAAAEAAAB8A==
+</value>
+  </data>
 </root>
